--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
             #tel{
             height: 25px;
             width: 55%; 
+            margin-top: 30px ;
+            }
+            #dddNum{
+                margin-right: 20%;
+            }
+            #ufSpan{
+                margin-left: 20%;
             }
         }
         
@@ -57,9 +64,9 @@
         .erro{
             color: red;
         }
-        #uf{
+        #uf, #dddNum{
             height: 30px;
-            width: 50px;
+            width: 15%;
         }
         .button{
             background-color: red;
@@ -90,8 +97,10 @@
                 <input type="number" name="cpf" id="cpf"><br><br><br><br>
             </div>
             <div class="form">
-                <span>UF</span>
-                <select name="uf" id="uf">
+
+                <span id="ufSpan">UF</span>
+                <select name="uf" id="uf" onChange="ddd ()">
+                    <option value="null"></option>
                     <option value="ac">AC</option>
                     <option value="al">AL</option>
                     <option value="am">AM</option>
@@ -120,8 +129,14 @@
                     <option value="sp">SP</option>
                     <option value="to">TO</option>
                 </select>
+
+                <span id="dddSpan">&nbsp;&nbsp; DDD</span>
+                <select name="ddd" id="dddNum">
+                </select>
+
                 <span>&nbsp;&nbsp; N°</span>
                 <input type="tel" name="tel" id="tel"><br><br><br><br>
+
                 <input class="button" type="submit" value="ENVIAR" onclick="validar ()"><br><br>
             </div>
             <div class="erro" id="erro"></div>
@@ -131,6 +146,95 @@
 
     <script>
 
+        //variavel uf
+        let uf;
+        let dddNumVar;
+
+        function ddd (){
+            uf = document.getElementById('uf').value
+            if(uf == 'ac'){
+                dddNum.innerHTML = '<option value="68">68</option>';
+            }
+            if(uf == 'al'){
+                dddNum.innerHTML = '<option value="82">82</option>';
+            }
+            if(uf == 'am'){
+                dddNum.innerHTML = '<option value="92">92</option><option value="97">97</option>';
+            }
+            if(uf == 'ap'){
+                dddNum.innerHTML = '<option value="96">96</option>';
+            }
+            if(uf == 'ba'){
+                dddNum.innerHTML = '<option value="71">71</option><option value="73">73</option><option value="74">74</option><option value="75">75</option><option value="77">77</option>';
+            }
+            if(uf == 'ce'){
+                dddNum.innerHTML = '<option value="85">85</option><option value="88">88</option>';
+            }
+            if(uf == 'df'){
+                dddNum.innerHTML = '<option value="61">61</option>';
+            }
+            if(uf == 'es'){
+                dddNum.innerHTML = '<option value="27">27</option><option value="28">28</option>';
+            }
+            if(uf == 'go'){
+                dddNum.innerHTML = '<option value="62">62</option><option value="64">64</option>';
+            }
+            if(uf == 'ma'){
+                dddNum.innerHTML = '<option value="98">98</option><option value="99">99</option>';
+            }
+            if(uf == 'mg'){
+                dddNum.innerHTML = '<option value="31">31</option><option value="32">32</option><option value="33">33</option><option value="34">34</option><option value="35">35</option><option value="37">37</option><option value="38">38</option>';
+            }
+            if(uf == 'ms'){
+                dddNum.innerHTML = '<option value="67">67</option>';
+            }
+            if(uf == 'mt'){
+                dddNum.innerHTML = '<option value="65">65</option><option value="66">66</option>';
+            }
+            if(uf == 'pa'){
+                dddNum.innerHTML = '<option value="91">91</option><option value="93">93</option><option value="94">94</option>';
+            }
+            if(uf == 'pb'){
+                dddNum.innerHTML = '<option value="83">83</option>';
+            }
+            if(uf == 'pe'){
+                dddNum.innerHTML = '<option value="81">81</option><option value="87">87</option>';
+            }
+            if(uf == 'pi'){
+                dddNum.innerHTML = '<option value="86">86</option><option value="89">89</option>';
+            }
+            if(uf == 'pr'){
+                dddNum.innerHTML = '<option value="41">41</option><option value="42">42</option><option value="44">44</option><option value="45">45</option><option value="46">46</option>';
+            }
+            if(uf == 'rj'){
+                dddNum.innerHTML = '<option value="21">21</option><option value="22">22</option><option value="24">24</option>';
+            }
+            if(uf == 'rn'){
+                dddNum.innerHTML = '<option value="84">84</option>';
+            }
+            if(uf == 'ro'){
+                dddNum.innerHTML = '<option value="69">69</option>';
+            }
+            if(uf == 'rr'){
+                dddNum.innerHTML = '<option value="95">95</option>';
+            }
+            if(uf == 'rs'){
+                dddNum.innerHTML = '<option value="51">51</option><option value="53">53</option><option value="54">54</option><option value="55">55</option>';
+            }
+            if(uf == 'sc'){
+                dddNum.innerHTML = '<option value="47">47</option><option value="48">48</option><option value="49">49</option>';
+            }
+            if(uf == 'se'){
+                dddNum.innerHTML = '<option value="79">79</option>';
+            }
+            if(uf == 'sp'){
+                dddNum.innerHTML = '<option value="11">11</option><option value="12">12</option><option value="13">13</option><option value="14">14</option><option value="15">15</option><option value="16">16</option><option value="17">17</option><option value="18">18</option><option value="19">19</option>';
+            }
+            if(uf == 'to'){
+                dddNum.innerHTML = '<option value="63">63</option>';
+            }
+        }
+
         let strCPF;
         //12345678909
         let phone;
@@ -139,10 +243,11 @@
         */
 
         function validar(){
+            dddNumVar = document.getElementById('dddNum').value;
             strCPF = document.getElementById('cpf').value; 
             phone = document.getElementById('tel').value;
             let trueCPF = TestaCPF(strCPF);
-            let truePhone = validPhone(phone);
+            let truePhone = validPhone(dddNumVar+phone);
 
             console.log(trueCPF +" "+ truePhone)
             if (trueCPF == true && truePhone == true){
@@ -179,7 +284,7 @@
             }
 
             function validPhone (phone) {
-                var regex = new RegExp('^((1[1-9])|([2-9][0-9]))((3[0-9]{3}[0-9]{4})|(9[0-9]{3}[0-9]{5}))$');
+                let regex = new RegExp('^((1[1-9])|([2-9][0-9]))((3[0-9]{3}[0-9]{4})|(9[0-9]{3}[0-9]{5}))$');
                 return regex.test(phone);
         }
 
