--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
             #ufSpan{
                 margin-left: 20%;
             }
+            #uf, #dddNum{
+                height: 30px;
+                width: 15%;
+            }
         }
         
         @media (min-width: 900px){
@@ -56,6 +60,10 @@
             height: 25px;
             width: 200px;
             }
+            #uf, #dddNum{
+            height: 30px;
+            width: 50px;
+            }
         }
 
         .centro{
@@ -63,10 +71,6 @@
         }
         .erro{
             color: red;
-        }
-        #uf, #dddNum{
-            height: 30px;
-            width: 15%;
         }
         .button{
             background-color: red;
@@ -135,7 +139,7 @@
                 </select>
 
                 <span>&nbsp;&nbsp; N°</span>
-                <input type="tel" name="tel" id="tel"><br><br><br><br>
+                <input type="number" name="tel" id="tel"><br><br><br><br>
 
                 <input class="button" type="submit" value="ENVIAR" onclick="validar ()"><br><br>
             </div>
