--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 Insira o CPF do cliente<br><br>
             </div>
             <div class="form">
-                <input type="number" id="cpf"><br><br><br><br>
+                <input type="number" id="cpf" autocomplete="off"><br><br><br><br>
             </div>
             <div class="form">
 
