--- a/v3 cadastro.html
+++ b/v3 cadastro.html
@@ -69,7 +69,7 @@
                 top: 0%;
                 width: 100%;
                 height: 25%;
-                font-size: 2.8vh;
+                font-size: 2.6vh;
             }
             #email{
                 position: absolute;
@@ -85,7 +85,7 @@
                 position: absolute;
                 left: 0%;
                 top: 35%;
-                font-size: 2.6vh;
+                font-size: 2.4vh;
             }
             .centro_termos{
                 position: absolute;
@@ -98,7 +98,7 @@
                 border: #ffffff 1px solid;
                 border-radius: 5px;
                 padding: 10px 10px 0px 10px;
-                font-size: 2.4vh;
+                font-size: 2.2vh;
             }
             #caixa{
                 position: absolute;
@@ -111,7 +111,7 @@
                 position: absolute;
                 left: 7%;
                 top: 70%;
-                font-size: 2.4vh;
+                font-size: 2.2vh;
             }
             .button{
                 position: absolute;
@@ -128,11 +128,9 @@
             .erro{
                 position: absolute;
                 left: 0%;
-                bottom: 4%;
-                width: 100%;
-                height: 12%;
+                bottom: 12%;
                 color: #9A1914;
-                font-size: 3vh;
+                font-size: 2.5vh;
             }
         }
         @media (min-width: 915px){
@@ -327,10 +325,10 @@
                     console.log("cadastrado");
                     alert("cadastrado");
                 }else{
-                    erro.innerHTML = "marque o checkbox";
+                    erro.innerHTML = "Marque o checkbox";
                 }
             }else{
-                erro.innerHTML = "email invalido";
+                erro.innerHTML = "Email invalido";
             }
         }
 
