--- a/v3 index.html
+++ b/v3 index.html
@@ -68,7 +68,7 @@
                 top: -15%;
                 width: 100%;
                 height: 20%;
-                font-size: 3vh;
+                font-size: 2.6vh;
             }
             #cpf{
                 position: absolute;
@@ -126,10 +126,8 @@
                 position: absolute;
                 left: 0%;
                 bottom: 0%;
-                width: 100%;
-                height: 12%;
                 color: #9A1914;
-                font-size: 3vh;
+                font-size: 2.5vh;
             } 
         }
         @media (min-width: 915px){
@@ -249,8 +247,6 @@
                 position: absolute;
                 left: 0%;
                 bottom: 0%;
-                width: 100%;
-                height: 12%;
                 color: #9A1914;
                 font-size: 3vh;
             }
@@ -377,11 +373,11 @@
             if (trueCPF == true && truePhone == true){
                 window.location.href = "v3 cadastro.html";
             }else if(trueCPF == false && truePhone == true){
-                erro.innerHTML = "cpf invalido";
+                erro.innerHTML = "CPF invalido";
             }else if(truePhone == false && trueCPF == true){
-                erro.innerHTML = "número invalido";
+                erro.innerHTML = "Número invalido";
             }else if(truePhone == false && trueCPF == false){
-                erro.innerHTML = "número e cpf invalidos";
+                erro.innerHTML = "Número e CPF invalidos";
             }
         }
 
