--- a/v3 cadastro.html
+++ b/v3 cadastro.html
@@ -45,7 +45,8 @@
                 top: 100vh;
                 width: 100vw;
                 height: 15vh;
-                background-color: black;
+                background-image: url(img.png);
+                background-position: center;
             }
             .centro{
                 position: absolute;
@@ -169,7 +170,7 @@
                 top: 20vh;
                 width: 30vw;
                 height: 80vh;
-                background-color: black;
+                background-image: url(img.png);
             }
             .centro{
                 position: absolute;
