--- a/v3 index.html
+++ b/v3 index.html
@@ -45,7 +45,8 @@
                 top: 75vh;
                 width: 100vw;
                 height: 25vh;
-                background-color: black;
+                background-image: url(img.png);
+                background-position: center;
             }
             .centro{
                 position: absolute;
@@ -166,7 +167,7 @@
                 top: 20vh;
                 width: 30vw;
                 height: 80vh;
-                background-color: black;
+                background-image: url(img.png);
             }
             .centro{
                 position: absolute;
