--- a/v3 cadastro.html
+++ b/v3 cadastro.html
@@ -131,6 +131,7 @@
                 left: 0%;
                 bottom: 12%;
                 color: #9A1914;
+                background-color: white;
                 font-size: 2.5vh;
             }
         }
@@ -254,6 +255,7 @@
                 left: 0%;
                 bottom: -12%;
                 color: #9A1914;
+                background-color: white;
                 font-size: 3vh;
             }
         }
