--- a/v3 index.html
+++ b/v3 index.html
@@ -128,6 +128,7 @@
                 left: 0%;
                 bottom: 0%;
                 color: #9A1914;
+                background-color: white;
                 font-size: 2.5vh;
             } 
         }
@@ -249,6 +250,7 @@
                 left: 0%;
                 bottom: 0%;
                 color: #9A1914;
+                background-color: white;
                 font-size: 3vh;
             }
         }
