--- a/v3 cadastro.html
+++ b/v3 cadastro.html
@@ -7,6 +7,10 @@
     <title>Tela 2</title>
 </head>
 <body>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">   
     
     <style>
         @media (max-width: 915px){
@@ -16,6 +20,7 @@
                 top: 0vh;
                 width: 100vw;
                 height: 100vh;
+                font-family: 'Raleway', sans-serif;
             }
             .logo{
                 position: absolute;
@@ -38,6 +43,7 @@
                 top: 5.5vh;
                 color: #ffffff;
                 font-size: 3.5vh;
+                font-weight: 750;
             }
             .inform{
                 position: absolute;
@@ -75,7 +81,7 @@
             #email{
                 position: absolute;
                 left: 0%;
-                top: 23.5%;
+                top: 26%;
                 width: 98%;
                 height: 6.5%;
                 border: #ffffff 1px solid;
@@ -133,6 +139,7 @@
                 color: #9A1914;
                 background-color: white;
                 font-size: 2.5vh;
+                border-radius: 5px;
             }
         }
         @media (min-width: 915px){
@@ -142,6 +149,7 @@
                 top: 0vh;
                 width: 100vw;
                 height: 100vh;
+                font-family: 'Raleway', sans-serif;
             }
             .logo{
                 position: absolute;
@@ -164,6 +172,7 @@
                 top: 7vh;
                 color: #ffffff;
                 font-size: 6vh;
+                font-weight: 750;
             }
             .inform{
                 position: absolute;
@@ -183,10 +192,10 @@
             }
             .centro_div{
                 position: absolute;
-                left: 20%;
-                top: 8%;
-                width: 60%;
-                height: 80%;
+                left: 30%;
+                top: 9%;
+                width: 48%;
+                height: 66%;
             }
             .centro_txtDes{
                 position: absolute;
@@ -195,11 +204,12 @@
                 width: 100%;
                 height: 25%;
                 font-size: 2.8vh;
+                font-weight: 400;
             }
             #email{
                 position: absolute;
                 left: 0%;
-                top: 22%;
+                top: 36%;
                 width: 81.7%;
                 height: 11.2%;
                 border: #ffffff 1px solid;
@@ -209,14 +219,15 @@
             .centro_des_termos{
                 position: absolute;
                 left: 0%;
-                top: 37%;
+                top: 52%;
                 font-size: 2.6vh;
+                font-weight: 400;
             }
             .centro_termos{
                 position: absolute;
                 overflow-y:scroll;
                 left: 0%;
-                top: 43%;
+                top: 59%;
                 width: 80%;
                 height: 35%;
                 background-color: white;
@@ -224,24 +235,26 @@
                 border-radius: 5px;
                 padding: 10px 10px 0px 10px;
                 font-size: 2.4vh;
+                font-weight: 400;
             }
             #caixa{
                 position: absolute;
                 left: 0%;
-                top: 81%;
+                top: 98%;
                 width: 5%;
                 height: 5%;
             }
             .centro_txt_caixa{
                 position: absolute;
                 left: 6%;
-                top: 82%;
+                top: 99%;
                 font-size: 2.4vh;
+                font-weight: 400;
             }
             .button{
                 position: absolute;
                 left: 0%;
-                top: 92%;
+                top: 108%;
                 width: 20.9%;
                 height: 12.5%;
                 border: #9A1914 1px solid;
@@ -253,10 +266,11 @@
             .erro{
                 position: absolute;
                 left: 0%;
-                bottom: -12%;
+                bottom: -30%;
                 color: #9A1914;
                 background-color: white;
                 font-size: 3vh;
+                border-radius: 5px;
             }
         }
     </style>
@@ -265,7 +279,7 @@
 
         <div class="logo">
             <img class="logo_img" src="logo.png" height="150px" width="150px">
-            <b class="logo_b">PRÉ CADASTRO</b>
+            <b class="logo_b">PRÉ-CADASTRO</b>
         </div>
 
         <div class="inform"></div>
