--- a/v3 index.html
+++ b/v3 index.html
@@ -7,6 +7,10 @@
     <title>Tela 1</title>
 </head>
 <body>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">   
     
     <style>
         @media (max-width: 915px){
@@ -16,6 +20,7 @@
                 top: 0vh;
                 width: 100vw;
                 height: 100vh;
+                font-family: 'Raleway', sans-serif;
             }
             .logo{
                 position: absolute;
@@ -38,6 +43,7 @@
                 top: 5.5vh;
                 color: #ffffff;
                 font-size: 3.5vh;
+                font-weight: 750;
             }
             .inform{
                 position: absolute;
@@ -70,6 +76,7 @@
                 width: 100%;
                 height: 20%;
                 font-size: 2.6vh;
+                font-weight: 400;
             }
             #cpf{
                 position: absolute;
@@ -130,10 +137,12 @@
                 color: #9A1914;
                 background-color: white;
                 font-size: 2.5vh;
+                border-radius: 5px;
             } 
         }
         @media (min-width: 915px){
             .tela{
+                font-family: 'Raleway', sans-serif;
                 position: absolute;
                 left: 0vw;
                 top: 0vh;
@@ -161,6 +170,7 @@
                 top: 7vh;
                 color: #ffffff;
                 font-size: 6vh;
+                font-weight:750;
             }
             .inform{
                 position: absolute;
@@ -180,10 +190,10 @@
             }
             .centro_div{
                 position: absolute;
-                left: 25%;
+                left: 30%;
                 top: 35%;
-                width: 50%;
-                height: 50%;
+                width: 40%;
+                height: 40%;
             }
             .centro_span_titulo{
                 position: absolute;
@@ -192,6 +202,7 @@
                 width: 100%;
                 height: 20%;
                 font-size: 3vh;
+                font-weight: 400;
             }
             #cpf{
                 position: absolute;
@@ -252,7 +263,16 @@
                 color: #9A1914;
                 background-color: white;
                 font-size: 3vh;
+                border-radius: 5px;
             }
+        }
+        input::-webkit-outer-spin-button,
+        input::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
+        input[type=number]{
+            -moz-appearance: textfield;
         }
     </style>
 
@@ -306,7 +326,7 @@
                     <option value="">DDD</option>
                 </select>
 
-                <input type="tel" name="tel" id="tel" placeholder="Telefone do cliente">
+                <input type="number" name="tel" id="tel" placeholder="Telefone do cliente">
 
                 <input class="button" type="submit" value="ENVIAR" onclick="validar ()">
 
