--- a/v3 index.html
+++ b/v3 index.html
@@ -396,11 +396,11 @@
             if (trueCPF == true && truePhone == true){
                 window.location.href = "v3 cadastro.html";
             }else if(trueCPF == false && truePhone == true){
-                erro.innerHTML = "CPF invalido";
+                erro.innerHTML = "CPF inválido";
             }else if(truePhone == false && trueCPF == true){
-                erro.innerHTML = "Número invalido";
+                erro.innerHTML = "Número inválido";
             }else if(truePhone == false && trueCPF == false){
-                erro.innerHTML = "Número e CPF invalidos";
+                erro.innerHTML = "Número e CPF inválidos";
             }
         }
 
