--- a/v3 cadastro.html
+++ b/v3 cadastro.html
@@ -294,7 +294,7 @@
 
                 <input type="email" name="email" id="email" placeholder="Insira seu email">
 
-                <span class="centro_des_termos">Termos do Programa de fidelidade</span>
+                <span class="centro_des_termos">Termos do Programa de Fidelidade</span>
                 <div class="centro_termos">
                     Política de Privacidade
                     Na (nome empresarial simplificado), privacidade e segurança são prioridades e nos comprometemos com a transparência do tratamento de dados pessoais dos nossos usuários/clientes. Por isso, esta presente Política de Privacidade estabelece como é feita a coleta, uso e transferência de informações de clientes ou outras pessoas que acessam ou usam nosso site.
@@ -319,7 +319,7 @@
                 </div>
                     
                 <input id="caixa" type="checkbox"/> 
-                <span class="centro_txt_caixa">Aceite os termos</span>
+                <span class="centro_txt_caixa">Aceito os Termos do Programa de Fidelidade</span>
 
                 <input class="button" type="submit" value="ENVIAR" onclick="validar ()"><br><br>
                 <div class="erro" id="erro"></div>
@@ -342,7 +342,7 @@
                     console.log("cadastrado");
                     alert("cadastrado");
                 }else{
-                    erro.innerHTML = "Marque o checkbox";
+                    erro.innerHTML = "Marque o checkbox de aceitação dos termos";
                 }
             }else{
                 erro.innerHTML = "Email invalido";
