--- a/v3 cadastro.html
+++ b/v3 cadastro.html
@@ -345,7 +345,7 @@
                     erro.innerHTML = "Marque o checkbox de aceitação dos termos";
                 }
             }else{
-                erro.innerHTML = "Email invalido";
+                erro.innerHTML = "Email inválido";
             }
         }
 
