--- a/v3 cadastro.html
+++ b/v3 cadastro.html
@@ -65,7 +65,7 @@
             .centro_div{
                 position: absolute;
                 left: 5%;
-                top: 7%;
+                top: 5%;
                 width: 90%;
                 height: 100%;
             }
@@ -123,7 +123,7 @@
             .button{
                 position: absolute;
                 left: 0%;
-                top: 75%;
+                top: 78%;
                 width: 25%;
                 height: 7.2%;
                 border: #9A1914 1px solid;
@@ -135,7 +135,7 @@
             .erro{
                 position: absolute;
                 left: 0%;
-                bottom: 12%;
+                bottom: 10%;
                 color: #9A1914;
                 background-color: white;
                 font-size: 2.5vh;
@@ -193,7 +193,7 @@
             .centro_div{
                 position: absolute;
                 left: 30%;
-                top: 9%;
+                top: 6%;
                 width: 48%;
                 height: 66%;
             }
@@ -205,6 +205,7 @@
                 height: 25%;
                 font-size: 2.8vh;
                 font-weight: 400;
+                line-height: 1.22;
             }
             #email{
                 position: absolute;
@@ -219,7 +220,7 @@
             .centro_des_termos{
                 position: absolute;
                 left: 0%;
-                top: 52%;
+                top: 55%;
                 font-size: 2.6vh;
                 font-weight: 400;
             }
@@ -227,7 +228,7 @@
                 position: absolute;
                 overflow-y:scroll;
                 left: 0%;
-                top: 59%;
+                top: 62%;
                 width: 80%;
                 height: 35%;
                 background-color: white;
@@ -240,21 +241,21 @@
             #caixa{
                 position: absolute;
                 left: 0%;
-                top: 98%;
+                top: 101%;
                 width: 5%;
                 height: 5%;
             }
             .centro_txt_caixa{
                 position: absolute;
                 left: 6%;
-                top: 99%;
+                top: 102%;
                 font-size: 2.4vh;
                 font-weight: 400;
             }
             .button{
                 position: absolute;
                 left: 0%;
-                top: 108%;
+                top: 115%;
                 width: 20.9%;
                 height: 12.5%;
                 border: #9A1914 1px solid;
@@ -266,7 +267,7 @@
             .erro{
                 position: absolute;
                 left: 0%;
-                bottom: -30%;
+                bottom: -37%;
                 color: #9A1914;
                 background-color: white;
                 font-size: 3vh;
